--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -24,4 +24,11 @@
     <li>
          <a href="/borrarProductos"> Eliminar Productos</a>
     </li>
+    <li>
+         <a href="/visualizarUsuarios"> Visualizar usuarios</a>
+    </li>
+    <li>
+          <a href="/mantenimientoUsuarios"> Mantener Usuarios</a>
+    </li>
+
 </ul>
