--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -30,5 +30,8 @@
     <li>
           <a href="/mantenimientoUsuarios"> Mantener Usuarios</a>
     </li>
+    <li>
+          <a href="/depurarUsuarios"> Depurar usuarios inactivos</a>
+    </li>
 
 </ul>
