--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -16,8 +16,8 @@
 {{/if}}
 
 <form id='login' action="/api/sesions/login" method="post"> 
-<input type="email" name="email" placeholder="email">
-<input type="password" name="password" placeholder="password">
+<input type="email" name="email" placeholder="email" autocomplete="email">
+<input type="password" name="password" placeholder="password" autocomplete="off">
 
 <input type="submit" value="Login" >
 </form>
