--- a/src/views/registro.handlebars
+++ b/src/views/registro.handlebars
@@ -11,11 +11,11 @@
 
 <form action="/api/sesions/registro" method="post"> 
 
-<input type="text" name="name" placeholder="nombre">
-<input type="text" name="last_name" placeholder="apellido">
-<input type="number" name="age" placeholder="edad"> 
-<input type="email" name="email" placeholder="email">
-<input type="password" name="password" placeholder="password">
+<input type="text" name="name" placeholder="nombre" autocomplete="off">
+<input type="text" name="last_name" placeholder="apellido" autocomplete="off">
+<input type="number" name="age" placeholder="edad" autocomplete="off"> 
+<input type="email" name="email" placeholder="email" autocomplete="off">
+<input type="password" id="password" name="password" placeholder="Nueva contraseña" autocomplete="off">
 
 <input type="submit" value="Registrar" >
 </form>
