--- a/src/public/assets/css/styles.css
+++ b/src/public/assets/css/styles.css
@@ -135,3 +135,25 @@ display:inline-flex;
 #cartId {
   display:none
 }
+
+.pagination-link {
+  margin: 10px;
+  display:inline-flex
+}
+
+#pages-availables {
+  border: 1px solid black;
+  border-radius:50%;
+  padding: 5px;
+  background-color: lightblue;
+  font-weight: bold;
+  margin:15px
+}
+
+#current-page {
+  border: 1px solid black;
+  padding: 8px;
+  font-weight: bold;
+  display:inline-flex;
+  margin:15px
+}
