--- a/src/public/assets/css/styles.css
+++ b/src/public/assets/css/styles.css
@@ -157,3 +157,17 @@ display:inline-flex;
   display:inline-flex;
   margin:15px
 }
+#loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid #3498db; /* Puedes cambiar el color según tus preferencias */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin-right: 10px; /* Ajusta según tu diseño */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
